--- a/style.css
+++ b/style.css
@@ -523,40 +523,83 @@ body {
 }
 
 .flip-card-front.html {
-  background: linear-gradient(
-    to right,
-    rgba(255, 68, 0, 0.8) 0%,
-    rgba(255, 68, 0, 0.8) 90%,
-    #dbe6fd 90%,
-    #dbe6fd 100%
-  );
+  background: rgba(255, 68, 0, 0.8);
 }
-.flip-card-front.css {
+.flip-card-front.html::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  transform: translateX(100%);
+  position: absolute;
   background: linear-gradient(
     to right,
-    rgba(65, 105, 225, 0.8) 0%,
-    rgba(65, 105, 225, 0.8) 80%,
-    #dbe6fd 80%,
-    #dbe6fd 100%
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(128, 186, 232, 0) 99%,
+    rgba(125, 185, 232, 0) 100%
   );
+  animation: slide 1.5s infinite;
+}
+
+.flip-card-front.css {
+  background: rgba(65, 105, 225, 0.8);
+}
+.flip-card-front.css::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  transform: translateX(100%);
+  position: absolute;
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(128, 186, 232, 0) 99%,
+    rgba(125, 185, 232, 0) 100%
+  );
+  animation: slide 1.5s infinite;
+  animation-delay: 0.5s;
 }
 .flip-card-front.js {
+  background: rgba(255, 255, 0, 0.8);
+}
+.flip-card-front.js::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  transform: translateX(100%);
+  position: absolute;
   background: linear-gradient(
     to right,
-    rgba(255, 255, 0, 0.8) 0%,
-    rgba(255, 255, 0, 0.8) 75%,
-    #dbe6fd 75%,
-    #dbe6fd 100%
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(128, 186, 232, 0) 99%,
+    rgba(125, 185, 232, 0) 100%
   );
+  animation: slide 1.5s infinite;
 }
 .flip-card-front.react {
+  background: rgba(135, 207, 235, 0.8);
+}
+.flip-card-front.react::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  transform: translateX(100%);
+  position: absolute;
   background: linear-gradient(
     to right,
-    rgba(135, 207, 235, 0.8) 0%,
-    rgba(135, 207, 235, 0.8) 60%,
-    #dbe6fd 60%,
-    #dbe6fd 100%
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.8) 50%,
+    rgba(128, 186, 232, 0) 99%,
+    rgba(125, 185, 232, 0) 100%
   );
+  animation: slide 1.5s infinite;
+  animation-delay: 0.5s;
 }
 
 .flip-card-back {
@@ -1044,6 +1087,15 @@ body {
   /* display: block; */
   opacity: 1;
   pointer-events: auto;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
 }
 
 @keyframes anime {
