--- a/style.css
+++ b/style.css
@@ -1238,94 +1238,104 @@ body {
   }
 }
 
-@media (max-width: 800px) {
-  .main-container {
-    justify-content: space-between;
-  }
-
-  .main .main-container .details {
-    flex-direction: column;
-    height: 95%;
-    padding: 30px 30px;
-  }
-
-  .main-container .details .details-wrap {
-    flex-direction: row;
-    width: 100%;
-    height: 40%;
-    justify-content: space-around;
-    align-items: center;
-    margin: 20px 0;
-    padding: 0;
-  }
-
-  .main-container .details .details-wrap .my-info {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: space-around;
-    margin-left: 10px;
-  }
-
-  .main-container .details .details-wrap img {
-    width: 150px;
-    height: auto;
-    margin: 10px;
-  }
-
+@media (max-width: 1200px) {
+  /* main */
   .main-container .details .details-description-wrap {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-    width: 100%;
-    margin: 20px;
-  }
-
-  .main .main-container .preview {
-    display: flex;
-    width: 100%;
-    height: 5%;
-    margin-top: 6px;
     justify-content: center;
     align-items: center;
   }
 
-  .preview-title {
+  .details .details-description-wrap .my-description {
+    line-height: 150%;
+  }
+
+  .details .details-description-wrap .btn-resume {
+    position: static;
+    margin-top: 15px;
+    margin-bottom: -5px;
+  }
+
+  /* Modal Projects */
+  .section.projects .modal .modal-contents {
+    width: 800px;
+    height: 440px;
+  }
+
+  .modal-contents .modal-project-left .modal-project-gif {
+    width: 240px;
+    height: 360px;
+  }
+
+  .modal-contents .modal-divide {
+    width: 2px;
+    margin: 0 25px;
+  }
+
+  .modal-contents .modal-project-right .modal-project-description {
+    line-height: 30px;
+  }
+
+  .modal-contents .modal-project-right .modal-project-stacks span {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 800px) {
+  /* main */
+  .main-container .details .details-description-wrap {
+    height: 90%;
+  }
+
+  .details .details-description-wrap .my-description {
+    height: 100%;
+    line-height: 180%;
+    font-size: 15px;
+  }
+
+  .main-container .previews {
+    /* ?? */
+    content: "Navigation";
+  }
+
+  .main .main-container .preview {
+    height: 10%;
+    min-height: unset;
+    max-height: unset;
+    margin-bottom: 0;
+    padding: 3px;
+  }
+
+  .main-container .preview .preview-skills,
+  .main-container .preview .preview-projects,
+  .main-container .preview .preview-contacts {
+    font-size: 13px;
+  }
+
+  .preview .preview-skills .skillbox {
     display: none;
   }
 
-  .skills-container {
-    flex-direction: column;
-  }
-
-  .skills-container .container-divide-hc,
-  .skills-container .container-divide-jr {
-    width: 100%;
-    margin: 0;
-  }
-
-  .skillbox {
-    display: none;
-  }
-
-  .skillbox.left,
-  .skillbox.right,
-  .skillbox.top,
-  .skillbox.bot {
-    display: none;
+  .main-container .preview .preview-skills .this,
+  .main-container .preview .preview-projects .this,
+  .main-container .preview .preview-contacts .this {
+    letter-spacing: 2px;
   }
 
   .main-container .preview .preview-skills:hover .this,
   .main-container .preview .preview-projects:hover .this,
   .main-container .preview .preview-contacts:hover .this {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    display: inline;
+    color: #fff;
   }
 
-  .preview-projects:hover .image-container,
-  .preview-projects:hover .image-container .each-image {
+  .preview .preview-projects:hover .image-container,
+  .preview .preview-projects:hover .image-container .each-image,
+  .preview .preview-projects:hover .buttons-container,
+  .preview .preview-projects .image-container .each-image,
+  .preview-contacts:hover .icons,
+  .preview-contacts:hover .contents {
     display: none;
   }
 
@@ -1333,71 +1343,142 @@ body {
     display: none;
   }
 
-  .preview-contacts:hover .icons,
-  .preview-contacts:hover .contents {
-    display: none;
+  /* Skills */
+
+  .skills-container {
+    flex-wrap: wrap;
   }
 
-  .project-each .image-container-left {
-    margin-left: 15px;
+  .skills-container .container-divide-hc,
+  .skills-container .container-divide-jr {
+    width: 100%;
+    margin-bottom: 0;
   }
 
-  .project-each .image-container-left .each-project-img {
+  .skill-card {
+    height: 110px;
+  }
+
+  .skill-card i {
+    font-size: 30px;
+    margin-right: 15px;
+  }
+
+  .flip-card-back p {
+    font-size: 15px;
+  }
+
+  .sub-stacks-card {
     width: 160px;
-    height: 210px;
+    height: 40px;
+    font-size: 14px;
   }
 
-  .project-each .image-container-left .each-project-gif {
-    width: 160px;
-    height: 210px;
-  }
-  .project-each .image-container-left:hover .each-project-img {
-    width: 300px;
-    height: 380px;
-    opacity: 0;
-  }
-  .project-each .image-container-left:hover .each-project-gif {
-    width: 300px;
-    height: 380px;
+  /* Projects */
+  .projects-container .project-categories .category-btn {
+    height: 30px;
+    font-size: 13px;
+    margin: 15px 1px 0 1px;
+    line-height: 13px;
   }
 
-  .project-each .des-container-right {
-    margin: 0 15px 0 20px;
-    max-width: 400px;
+  .projects-container .project-categories .category-btn:nth-child(1) {
+    margin: 15px 1px 0 0;
+  }
+
+  .projects-container .project-categories .category-btn:nth-child(4) {
+    margin: 15px 0 0 1px;
+  }
+
+  .category-btn.selected,
+  .category-btn:hover {
+    transform: scaleY(1.2) translateY(-2px);
+    color: #fff;
+  }
+
+  .category-btn.selected::after,
+  .category-btn:hover:after {
+    font-size: 13px;
+    padding-top: 3px;
+  }
+
+  /* Modal Projects */
+  .section.projects .modal .modal-contents {
+    width: 600px;
+    height: 740px;
+    flex-direction: column;
+  }
+
+  .modal .modal-contents .modal-project-left {
+    width: 100%;
+    height: 100%;
     justify-content: center;
   }
 
-  .project-each .des-container-right .each-project-title {
-    font-size: 15px;
+  .modal-contents .modal-project-left .modal-project-gif {
+    width: 300px;
+    height: 390px;
   }
 
-  .project-each .des-container-right .each-project-description {
-    font-size: 15px;
-    margin: 20px 0;
+  /* ㄷㄷㄷ */
+  .modal-contents .modal-divide {
+    width: 85%;
+    height: 5px;
+    margin: -5px 0 20px 0;
+    border-radius: 1.5px;
   }
 
-  .project-each .des-container-right .each-project-tag {
-    font-size: 13px;
-    padding: 3px 7px;
+  .modal .modal-contents .modal-project-right {
+    width: 100%;
+    height: 60%;
+    padding: 0 25px 10px 25px;
   }
 
-  .project-each .des-container-right .each-project-stacks span {
+  .modal-contents .modal-project-right .modal-project-title {
+    height: 20px;
+    line-height: 20px;
+    font-size: 17px;
+  }
+
+  .modal-contents .modal-project-right .modal-project-tag {
+    height: 25px;
     font-size: 15px;
-    padding: 3px 10px;
+    padding: 2px 10px;
+    position: absolute;
+    top: -5px;
+    right: 25px;
+  }
+
+  .modal-contents .modal-project-right .modal-project-description {
+    padding-right: 20px;
+    line-height: 30px;
+    height: 60%;
+  }
+
+  .modal-contents .modal-project-right .modal-project-stacks {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .modal-contents .modal-project-right .modal-project-stacks span {
+    font-size: 12px;
+    padding: 3px 12px;
+    margin-top: 5px;
+    margin-right: 5px;
+  }
+
+  .modal .modal-contents .modal-project-right .closeModal {
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: -455px;
+    right: 10px;
   }
 }
 
 @media (max-width: 600px) {
-  .project-each .des-container-right {
-    padding: 20px 0;
-    justify-content: space-between;
-  }
-
-  .project-each .des-container-right .each-project-tag {
-    display: none;
-  }
-
-  .project-each .des-container-right .each-project-stacks span {
+  .main .main-container .preview,
+  .main-container .previews {
     display: none;
   }
 }
