--- a/style.css
+++ b/style.css
@@ -626,6 +626,10 @@ body {
 }
 
 .flip-card-back {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #dbe6fd;
   color: black;
   transform: rotateY(180deg);
@@ -636,6 +640,7 @@ body {
 .flip-card-back p {
   display: block;
   font-size: 17px;
+  margin: 0;
 }
 
 .sub-stacks-container {
@@ -1241,9 +1246,10 @@ body {
 @media (max-width: 1200px) {
   /* main */
   .main-container .details .details-description-wrap {
+    height: 90%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
   }
 
@@ -1255,6 +1261,27 @@ body {
     position: static;
     margin-top: 15px;
     margin-bottom: -5px;
+  }
+
+  .main .main-container .preview {
+    height: 55%;
+    min-height: unset;
+    max-height: unset;
+    margin-bottom: 0;
+    padding: 3px;
+  }
+
+  .preview-contacts .icons,
+  .preview-contacts .contents {
+    font-size: 19px;
+    margin-left: 5px;
+    width: 10%;
+  }
+
+  .preview-contacts .contents {
+    font-size: 15px;
+    margin-right: 5px;
+    width: 100%;
   }
 
   /* Modal Projects */
@@ -1292,11 +1319,6 @@ body {
     height: 100%;
     line-height: 180%;
     font-size: 15px;
-  }
-
-  .main-container .previews {
-    /* ?? */
-    content: "Navigation";
   }
 
   .main .main-container .preview {
@@ -1378,16 +1400,16 @@ body {
   .projects-container .project-categories .category-btn {
     height: 30px;
     font-size: 13px;
-    margin: 15px 1px 0 1px;
+    margin: 10px 1px 0 1px;
     line-height: 13px;
   }
 
   .projects-container .project-categories .category-btn:nth-child(1) {
-    margin: 15px 1px 0 0;
+    margin: 10px 1px 0 0;
   }
 
   .projects-container .project-categories .category-btn:nth-child(4) {
-    margin: 15px 0 0 1px;
+    margin: 10px 0 0 1px;
   }
 
   .category-btn.selected,
@@ -1420,7 +1442,6 @@ body {
     height: 390px;
   }
 
-  /* ㄷㄷㄷ */
   .modal-contents .modal-divide {
     width: 85%;
     height: 5px;
@@ -1453,6 +1474,7 @@ body {
     padding-right: 20px;
     line-height: 30px;
     height: 60%;
+    font-size: 14px;
   }
 
   .modal-contents .modal-project-right .modal-project-stacks {
