--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ body {
 .section.main {
   width: 100%;
   background-color: #f8f8f8;
+  overflow-x: hidden;
 }
 
 .main .wrap {
@@ -1243,6 +1244,81 @@ body {
   }
 }
 
+@keyframes anime-mobile {
+  0% {
+    width: 280px;
+    height: 200px;
+    background: #f0f0f0;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  12.5% {
+    width: 60px;
+    height: 200px;
+    background: #f8f8f8;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  25% {
+    width: 60px;
+    height: 60px;
+    background: #f8f8f8;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  45% {
+    width: 60px;
+    height: 60px;
+    background: #a1d1c2;
+    transform: rotate(20deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  50% {
+    width: 60px;
+    height: 60px;
+    background: #92d6c0;
+    transform: rotate(-20deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  52.5% {
+    width: 60px;
+    height: 60px;
+    background: #7fd4b9;
+    transform: rotate(10deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  55% {
+    width: 60px;
+    height: 60px;
+    background: #6ed6b5;
+    transform: rotate(-10deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  87.5% {
+    width: 60px;
+    height: 200px;
+    background: #5cd3ad;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+  100% {
+    width: 280px;
+    height: 200px;
+    background: #5cd3ad;
+    transform: rotate(0deg);
+    box-shadow: 10px 10px 10px #cccccc, 10px 10px 10px #ffffff,
+      0 0 0 #cccccc inset, 0 0 0 #ffffff inset;
+  }
+}
+
 @media (max-width: 1200px) {
   /* main */
   .main-container .details .details-description-wrap {
@@ -1366,7 +1442,6 @@ body {
   }
 
   /* Skills */
-
   .skills-container {
     flex-wrap: wrap;
   }
@@ -1502,5 +1577,272 @@ body {
   .main .main-container .preview,
   .main-container .previews {
     display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  /* Home */
+  .section {
+    background-color: #fff;
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 1s ease;
+    z-index: 1;
+  }
+
+  .section .wrap {
+    width: 70%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    max-width: 1300px;
+    background-color: #fff;
+  }
+
+  .section h1 {
+    font-size: 25px;
+    margin-bottom: 10px;
+  }
+
+  .home-wrap .home-info {
+    width: 280px;
+    height: 200px;
+    padding: 10px 0;
+    animation: anime-mobile 3s cubic-bezier(0.16, 1, 0.3, 1) 1s alternate;
+  }
+
+  .home-info h1 {
+    font-size: 30px;
+    margin: 0;
+  }
+
+  .home-info h3 {
+    font-size: 14px;
+  }
+
+  .home-wrap .home-info .line {
+    height: 1.5px;
+    width: 150px;
+    margin: 0;
+  }
+
+  .home-info .hello {
+    font-size: 70px;
+  }
+
+  /* main */
+  .main h1 {
+    width: fit-content;
+    margin-bottom: 5px;
+  }
+
+  .main-container .cover-letter {
+    font-size: 14px;
+    margin-bottom: 0;
+  }
+
+  .main .main-container .details {
+    margin: 0;
+  }
+
+  .main-container .details .details-description-wrap {
+    margin: 10px;
+    height: 90%;
+  }
+
+  .details .details-description-wrap .my-description {
+    font-size: 14px;
+  }
+
+  /* Skills */
+  .main-stacks {
+    margin-bottom: 10px;
+  }
+
+  .main-stacks-title,
+  .sub-stacks-title {
+    font-size: 15px;
+  }
+
+  .skill-card {
+    height: 80px;
+    font-size: 15px;
+  }
+
+  .skill-card i {
+    font-size: 20px;
+  }
+  .flip-card-back p {
+    font-size: 13px;
+  }
+
+  .sub-stacks-container {
+    max-width: 480px;
+  }
+
+  .sub-stacks-card {
+    width: 100px;
+    height: 35px;
+    font-size: 12px;
+    padding: 0 10px;
+  }
+
+  /* Projects */
+  .section.projects {
+    width: 100%;
+    background-color: #f8f8f8;
+    position: relative;
+  }
+
+  .projects .wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-color: #f8f8f8;
+  }
+
+  .projects-container {
+    width: 100%;
+    height: 80%;
+    max-height: 680px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .projects-container .project-categories {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .projects-container .project-categories .category-btn {
+    font-size: 12px;
+  }
+
+  .projects-container .project-list {
+    padding: 0 10px;
+  }
+
+  .project-each .image-link,
+  .project-each .each-project-title {
+    font-size: 12px;
+  }
+
+  .project-each .image-link .each-project-img {
+    width: 100px;
+    height: 180px;
+  }
+
+  /* Modal Projects */
+  .section.projects .modal .modal-contents {
+    width: 300px;
+    height: 500px;
+  }
+
+  .modal .modal-contents .modal-project-left {
+    width: fit-content;
+    height: fit-content;
+    padding: 10px 0;
+  }
+
+  .modal-contents .modal-project-left .modal-project-gif {
+    width: 150px;
+    height: 200px;
+  }
+
+  .modal-contents .modal-divide {
+    height: 4px;
+    margin: 0 0 10px 0;
+  }
+
+  .modal .modal-contents .modal-project-right {
+    height: 262.5px;
+    padding: 0 20px 3px 20px;
+  }
+
+  .modal-contents .modal-project-right .modal-project-title {
+    font-size: 16px;
+  }
+
+  .modal-contents .modal-project-right .modal-project-tag {
+    font-size: 13px;
+    height: 20px;
+    padding: 2px 5px;
+    top: 0;
+    right: 20px;
+  }
+
+  .modal-contents .modal-project-right .modal-project-description {
+    font-size: 13px;
+    line-height: unset;
+  }
+
+  .modal-contents .modal-project-right .modal-project-stacks span {
+    font-size: 10px;
+    padding: 3px 10px;
+    margin-top: 2.5px;
+    margin-right: 2.5px;
+  }
+
+  .modal .modal-contents .modal-project-right .closeModal {
+    width: 20px;
+    height: 20px;
+    top: -225px;
+    right: 10px;
+    font-size: 15px;
+    line-height: 15px;
+  }
+
+  /* Contacts */
+  .section.contact .wrap {
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: none;
+  }
+
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 20px 0;
+    padding: 0;
+  }
+
+  .contact-container .contact-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    min-width: unset;
+  }
+
+  .contact-info .info {
+    font-size: 25px;
+  }
+
+  .contact-info .info.email a,
+  .contact-info .info.mobile p,
+  .contact-info .kktalk p {
+    width: 210px;
+  }
+
+  .section.contact .contact-links {
+    font-size: 11px;
+    word-break: keep-all;
+    padding: 0 20px;
   }
 }
