--- a/style.css
+++ b/style.css
@@ -795,13 +795,12 @@ body {
   justify-content: space-between;
   align-items: center;
   background-color: #f5c156;
-  width: 200px;
+  width: 33%;
   max-height: 240px;
   border: #333 1px solid;
   border-radius: 10px;
   padding: 10px 0;
-  margin-top: 30px;
-  margin-right: 30px;
+  margin: 0 30px;
   cursor: pointer;
 }
 .project-list .projects-list-wrap .project-each.Active-web1 {
@@ -1497,6 +1496,10 @@ body {
   .category-btn:hover:after {
     font-size: 13px;
     padding-top: 3px;
+  }
+
+  .project-list .projects-list-wrap .project-each {
+    width: 50%;
   }
 
   /* Modal Projects */
