--- a/style.css
+++ b/style.css
@@ -525,7 +525,7 @@ body {
   height: 100%;
   text-align: center;
   transition: transform 1s;
-  transition-delay: 3s;
+  transition-delay: 10s;
   transform-style: preserve-3d;
 }
 
@@ -917,12 +917,17 @@ body {
 
 .modal-contents .modal-project-right .modal-project-description {
   padding-right: 50px;
+  width: 100%;
   height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   line-height: 50px;
   word-break: keep-all;
+}
+
+.modal-contents .modal-project-right .modal-project-description span {
+  width: 100%;
 }
 
 .modal-contents .modal-project-right .modal-project-stacks {
@@ -1585,26 +1590,6 @@ body {
 
 @media (max-width: 480px) {
   /* Home */
-  .section {
-    background-color: #fff;
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 1s ease;
-    z-index: 1;
-  }
-
-  .section .wrap {
-    width: 70%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    max-width: 1300px;
-    background-color: #fff;
-  }
-
   .section h1 {
     font-size: 25px;
     margin-bottom: 10px;
