--- a/style.css
+++ b/style.css
@@ -856,6 +856,7 @@ body {
   background-color: #f5c156;
   border-radius: 10px;
   border: 3px solid midnightblue;
+  overflow: hidden;
 }
 .section.projects .modal.Active-web1 .modal-contents {
   background-color: #e6616b;
@@ -916,17 +917,30 @@ body {
 }
 
 .modal-contents .modal-project-right .modal-project-description {
-  padding-right: 50px;
-  width: 100%;
-  height: 50%;
+  /* padding-right: 50px; */
+  width: 200%;
+  height: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
   line-height: 50px;
   word-break: keep-all;
+  overflow: hidden;
 }
 
-.modal-contents .modal-project-right .modal-project-description span {
+.modal-contents
+  .modal-project-right
+  .modal-project-description
+  .description-wrap {
+  display: flex;
+  width: 100%;
+  transition: 1s linear;
+}
+
+.modal-contents
+  .modal-project-right
+  .modal-project-description
+  .description-wrap
+  span {
   width: 100%;
 }
 
