--- a/style.css
+++ b/style.css
@@ -917,12 +917,11 @@ body {
 }
 
 .modal-contents .modal-project-right .modal-project-description {
-  /* padding-right: 50px; */
   width: 200%;
   height: 100%;
   display: flex;
   align-items: center;
-  line-height: 50px;
+  /* line-height: 50px; */
   word-break: keep-all;
   overflow: hidden;
 }
@@ -932,8 +931,10 @@ body {
   .modal-project-description
   .description-wrap {
   display: flex;
+  align-items: center;
   width: 100%;
-  transition: 1s linear;
+  height: 100%;
+  transition: 0.5s linear;
 }
 
 .modal-contents
@@ -942,6 +943,8 @@ body {
   .description-wrap
   span {
   width: 100%;
+  line-height: 200%;
+  margin-right: 20px;
 }
 
 .modal-contents .modal-project-right .modal-project-stacks {
@@ -973,6 +976,16 @@ body {
   font-size: 17px;
   font-weight: bold;
   line-height: 25px;
+}
+
+.modal .modal-contents .modal-project-right .description-next {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  cursor: pointer;
+  border: none;
+  color: #000;
+  font-size: 30px;
 }
 
 .section.projects .modal.hidden {
@@ -1394,8 +1407,12 @@ body {
     margin: 0 25px;
   }
 
-  .modal-contents .modal-project-right .modal-project-description {
-    line-height: 30px;
+  .modal-contents
+    .modal-project-right
+    .modal-project-description
+    .description-wrap
+    span {
+    line-height: 125%;
   }
 
   .modal-contents .modal-project-right .modal-project-stacks span {
@@ -1549,13 +1566,15 @@ body {
   .modal .modal-contents .modal-project-right {
     width: 100%;
     height: 60%;
-    padding: 0 25px 10px 25px;
+    /* padding: 0 25px 10px 25px; */
+    padding: 0 0 10px 0;
   }
 
   .modal-contents .modal-project-right .modal-project-title {
     height: 20px;
     line-height: 20px;
     font-size: 17px;
+    padding: 0 25px;
   }
 
   .modal-contents .modal-project-right .modal-project-tag {
@@ -1568,15 +1587,22 @@ body {
   }
 
   .modal-contents .modal-project-right .modal-project-description {
-    padding-right: 20px;
-    line-height: 30px;
-    height: 60%;
     font-size: 14px;
+  }
+
+  .modal-contents
+    .modal-project-right
+    .modal-project-description
+    .description-wrap
+    span {
+    line-height: 120%;
+    padding: 0 25px;
   }
 
   .modal-contents .modal-project-right .modal-project-stacks {
     display: flex;
     flex-wrap: wrap;
+    padding: 0 25px;
   }
 
   .modal-contents .modal-project-right .modal-project-stacks span {
@@ -1766,11 +1792,12 @@ body {
 
   .modal .modal-contents .modal-project-right {
     height: 262.5px;
-    padding: 0 20px 3px 20px;
+    padding: 0 0 3px 0;
   }
 
   .modal-contents .modal-project-right .modal-project-title {
     font-size: 16px;
+    padding: 0 15px;
   }
 
   .modal-contents .modal-project-right .modal-project-tag {
@@ -1782,8 +1809,21 @@ body {
   }
 
   .modal-contents .modal-project-right .modal-project-description {
-    font-size: 13px;
-    line-height: unset;
+    font-size: 12px;
+  }
+
+  .modal-contents
+    .modal-project-right
+    .modal-project-description
+    .description-wrap
+    span {
+    line-height: 105%;
+    padding: 0 15px;
+    margin-right: 0;
+  }
+
+  .modal-contents .modal-project-right .modal-project-stacks {
+    padding: 0 15px;
   }
 
   .modal-contents .modal-project-right .modal-project-stacks span {
@@ -1800,6 +1840,10 @@ body {
     right: 10px;
     font-size: 15px;
     line-height: 15px;
+  }
+
+  .modal .modal-contents .modal-project-right .description-next {
+    font-size: 20px;
   }
 
   /* Contacts */
