--- a/style.css
+++ b/style.css
@@ -149,24 +149,6 @@ body {
   margin: 30px 0;
 }
 
-/* .main-container .details .details-wrap {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
-  height: 100%;
-  margin: 0 20px 0 30px;
-}
-
-.main-container .details .details-wrap img {
-  width: 140px;
-}
-
-.main .main-container .details .my-info li {
-  list-style-type: none;
-  margin-bottom: 5px;
-  letter-spacing: 1px;
-} */
-
 .main-container .details .details-description-wrap {
   width: 100%;
   position: relative;
@@ -177,6 +159,12 @@ body {
   line-height: 200%;
   font-size: 16px;
   word-break: keep-all;
+}
+
+.details .details-description-wrap .my-description img {
+  width: 16px;
+  height: 16px;
+  transform: translateY(15%);
 }
 
 .details .details-description-wrap .btn-resume {
@@ -212,6 +200,19 @@ body {
   min-height: 170px;
   max-height: 280px;
   margin-bottom: 3px;
+  position: relative;
+}
+
+.main-container .preview .preview-mouse {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #000;
+  color: #fff;
+  width: 100px;
+  height: 50px;
+  opacity: 0;
+  border-radius: 5px;
 }
 
 .main-container .preview .preview-skills,
@@ -1129,13 +1130,23 @@ body {
   text-align: center;
   line-height: 50px;
   margin: 20px;
-  background-color: #f5c156;
-  color: #fff;
-  transition: 0.3s ease;
+  background-color: #fff;
+  color: black;
 }
 
-.contact-container .contact-visits a:hover {
-  color: black;
+.contact-container .contact-visits a img {
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+}
+
+.contact-container .contact-visits a i,
+.contact-container .contact-visits a img {
+  transition: 0.3s ease;
+}
+.contact-container .contact-visits a:hover i,
+.contact-container .contact-visits a:hover img {
+  transform: scale(1.15);
 }
 
 .section.contact .contact-links {
@@ -1148,47 +1159,6 @@ body {
   font-size: 13px;
   color: #fff;
   background-color: black;
-}
-
-/* arrow up button */
-.arrow-up {
-  background-image: url("icons/clip-638.png");
-  position: fixed;
-  bottom: 55px;
-  right: 15px;
-  width: 50px;
-  height: 50px;
-  border: none;
-  background-color: transparent;
-  opacity: 0;
-  transition: opacity 0.3s ease-in;
-  pointer-events: none;
-  cursor: pointer;
-}
-
-.arrow-up img {
-  width: 80%;
-  transform: rotate(5deg);
-}
-
-.arrow-up .flame {
-  width: 23%;
-  position: absolute;
-  top: 37px;
-  left: 21px;
-  opacity: 0;
-  transition: opacity 0.2s ease-in-out;
-}
-
-.arrow-up:hover .flame,
-.arrow-up.up .flame {
-  opacity: 1;
-}
-
-.arrow-up.visible {
-  /* display: block; */
-  opacity: 1;
-  pointer-events: auto;
 }
 
 @keyframes slide {
