--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
 .section.main {
   width: 100%;
   background-color: #f8f8f8;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .main .wrap {
@@ -209,10 +209,9 @@ body {
   left: 0;
   background-color: #000;
   color: #fff;
-  width: 100px;
-  height: 50px;
   opacity: 0;
   border-radius: 5px;
+  padding: 5px 10px;
 }
 
 .main-container .preview .preview-skills,
