--- a/style.css
+++ b/style.css
@@ -846,6 +846,11 @@ body {
   overflow: hidden;
 }
 
+.modal-project-link {
+  margin: 0;
+  padding: 0;
+}
+
 .section.projects .modal .modal-contents {
   width: 1100px;
   height: 540px;
@@ -857,6 +862,7 @@ body {
   border-radius: 10px;
   border: 3px solid midnightblue;
   overflow: hidden;
+  z-index: 201;
 }
 .section.projects .modal.Active-web1 .modal-contents {
   background-color: #e6616b;
